syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc.demo.hello";
option java_outer_classname = "HelloProto";

package hello;


message HelloResponse{
  int32 code = 1;
  string name = 2;
}

message HelloRequest{
  string name = 1;
}

service MyService{

  rpc sayHi(HelloRequest) returns (HelloResponse){}
}
